# dirmapper-plugin-auth

./: README.md  pyproject.toml
src/: config.py  service.py
src/auth/: github_auth.py
src/github/: auth_manager.py  github_repository_manager.py  github_user_manager.py
src/managers/: github_api_manager.py  github_repository_manager.py  repository_manager.py
src/providers/: github_provider.py  provider.py
