[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirmapper-plugin-auth"
version = "0.1.0"
description = "Authentication plugin for Dirmapper"
authors = [
    {name = "Nash Dean", email = "nashdean.github@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["authentication", "plugin", "dirmapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "dirmapper-core"
]

[project.urls]
Source = "https://github.com/nashdean/dirmapper-plugin-auth"
Issues = "https://github.com/nashdean/dirmapper-plugin-auth/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["github*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.10"
files = ["dirmapper_plugin_auth", "tests"]
ignore_missing_imports = true
