[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirmapper-provider"
version = "0.0.0"
description = "Provider plugin for Dirmapper supporting multiple APIs"
authors = [
    {name = "Nash Dean", email = "nashdean.github@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["provider", "plugin", "dirmapper", "github", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "dirmapper-core"
]

[project.urls]
Source = "https://github.com/nashdean/dirmapper-provider"
Issues = "https://github.com/nashdean/dirmapper-provider/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["providers*", "auth*", "managers*", "utils*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
ignore_missing_imports = true
